fix(ui-a11y): absolutely position offscreen content at top
TEST PLAN:

Screenreader content reads, functions as before.
When positioned near bottom of a 100% height scroll container,
screenreader content does not cause Safari to overflow html
style regressions

refs: INSTUI-1312

Reviewed-on: https://gerrit.instructure.com/142991
Tested-by: Jenkins
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-a11y/src/components/ScreenReaderContent/styles.css
+++ b/packages/ui-a11y/src/components/ScreenReaderContent/styles.css
@@ -4,6 +4,8 @@
   margin: -0.0625rem;
   padding: 0;
   position: absolute;
+  top: 0;
+  offset-inline-start: 0;
   overflow: hidden;
   clip: rect(0 0 0 0);
   border: 0;
